@@ -319,7 +319,8 @@
 2010-06-27: simple-usage-worker.js,simple-usage-worker.html
 	* Worker を触ってみる。
 
-2010-06-25: simple-usage-zope-interface.py
+2010-06-25: simple-usage-zope-interface.py [deleted]
+
 	* `zope.interface` モジュールを使う。
 
 2010-06-25: loop-test.py [deleted]
